Fixed spacing issues in sponsors page and navigation bar

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -8,7 +8,7 @@
 }
 
 .btn {
-  background-color: #63cbd6;
+  background-color: tomato;
   border: none;
   border-radius: 100px;
   width: 600px;
@@ -18,7 +18,7 @@
 }
 
 .btn:hover {
-  background-color: #6fe1ed;
+  background-color: orangered;
   cursor: pointer;
 }
 
