--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,5 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap');
+
+
 .header {
   /* background-color: #97d4b9; */
-  background-color: #fff;
+  background-color: tomato;
   box-shadow: 1px 4px 5px;
+}
+
+.logo {
+  font-family: 'Lobster Two', cursive;
+  cursor: context-menu;
 }
